Add Java 8 benchmark